API ChangeLog	(see the ChangeLog in each 'apps' directory for
		app specific changes


25-Feb-2002     Troy A. Griffitts <scribe@crosswire.org>
	Added chrislit's new gbs tools:
		utilities/thml2gbs
		utilities/imp2gbs

18-Feb-2002     Troy A. Griffitts <scribe@crosswire.org>
	Added dglassey's conditional reallocation of entrybuf to drivers
	Added dglassey's update to makesystem for icu
	Added other optimizations for prep of 1.5.3

16-Feb-2002     Troy A. Griffitts <scribe@crosswire.org>
	Added getBookName and getBookAbbrev to VerseKey along
		with struct book :: prefAbbrev member and data

24-Jan-2002     Troy A. Griffitts <scribe@crosswire.org>
	Added TreeKey and TreeKeyIdx decendants
	Added SWGenBook, and RawGenBook general book support
		and test programs

04-Jan-2002     Troy A. Griffitts <scribe@crosswire.org>
	Happy B-Day MOM!
	Added new property in Makefile.cfg: globalconfdir
		defaulted to /etc

20-Dec-2001     Troy A. Griffitts <scribe@crosswire.org>
	Added first cut of zLD

13-Dec-2001     Troy A. Griffitts <scribe@crosswire.org>
	Added __u16, __u32, and __u64 raw data types
	Added byte swapping macros
	Added standard swordtoarch and archtosword macros
		in 16, 32, and 64 bit versions
	Added remove to entriesblk
	Added tests for byte swapping

08-Dec-2001     Troy A. Griffitts <scribe@crosswire.org>
	Added new SWInputMethod class for keyboard mapping support.
	Added null input method which returns what it gets
	Added Hebrew Michigan-Claremont input method

02-Sep-2001     Troy A. Griffitts <scribe@crosswire.org>
	Added new swbasicfilter.cpp that provides many common method needed
		to make an swfilter implementation.
	Changed ThMLHTML filter to extend SWBasicFilter to take advantage of
		the new class.
	Added new utilstr.cpp method toupperstr to convert a c_str to all
		uppercase.
	Added new methods to the key classes to provide non-operator methods
		to access features to which there were non previously.  Makes