@@ -79,7 +79,7 @@ VERSION = 1.5.3
 am__include = include
 am__quote = 
 dir_confdef = no
-enable_debug = no
+enable_debug = yes
 enable_profile = no
 enable_vcl = no
 install_sh = /space/home/scribe/src/sword/install-sh
@@ -88,7 +88,7 @@ target_mingw32 = no
 target_os = linux-gnu
 target_system = intel
 target_vendor = pc
-with_conf = yes
+with_conf = no
 with_icu = no
 with_zlib = yes
 
@@ -243,7 +243,7 @@ LTCOMPILE = $(LIBTOOL) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) \
 CCLD = $(CC)
 LINK = $(LIBTOOL) --mode=link $(CCLD) $(AM_CFLAGS) $(CFLAGS) \
 	$(AM_LDFLAGS) $(LDFLAGS) -o $@
-CFLAGS = -g -O2
+CFLAGS = -g -O0 -Werror
 CXXCOMPILE = $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) \
 	$(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS)
 LTCXXCOMPILE = $(LIBTOOL) --mode=compile $(CXX) $(DEFS) \
@@ -252,7 +252,7 @@ LTCXXCOMPILE = $(LIBTOOL) --mode=compile $(CXX) $(DEFS) \
 CXXLD = $(CXX)
 CXXLINK = $(LIBTOOL) --mode=link $(CXXLD) $(AM_CXXFLAGS) $(CXXFLAGS) \
 	$(AM_LDFLAGS) $(LDFLAGS) -o $@
-CXXFLAGS = -g -O2
+CXXFLAGS = -g -O0 -Werror
 DIST_SOURCES = $(addld_SOURCES) $(addvs_SOURCES) $(cipherraw_SOURCES) \
 	$(ciphertest_SOURCES) $(ciphertest2_SOURCES) \
 	$(emptyvss_SOURCES) $(lexdump_SOURCES) $(mkfastmod_SOURCES) \
